--- a/css/masterwelcome.css
+++ b/css/masterwelcome.css
@@ -9,7 +9,7 @@
 
 body{
   background: #FFE8D6;
-
+overflow: hidden;
 }
 
 h1{
@@ -28,20 +28,35 @@ font-family: 'Montserrat', sans-serif;
 }
 
 .home--page{
-margin-left:35vw;
-margin-top:40vh;
+margin-left:auto;
+margin-right:auto;
+margin-top:30vh;
+padding: auto;
 text-align: center;
 z-index: 2;
-position:absolute;
 
 }
 
 .circle{
   margin:auto;
-  height:50vh;
-  width:50vh;
+  width: 50vw;
   z-index: 1;
   position:relative;
+  animation-iteration-count: infinite;
+  animation-name:cercle;
+  animation: all 2s ease;
+}
+
+@keyframes cercle {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform:  scale(0.5);
+  }
+  100% {
+    transform:  scale(3);
+  }
 }
 
 .btn a{
