--- a/css/masterwelcome.css
+++ b/css/masterwelcome.css
@@ -42,22 +42,26 @@ z-index: 2;
   width: 50vw;
   z-index: 1;
   position:relative;
+
+}
+
+#cercle1{
   animation-iteration-count: infinite;
   animation-name:cercle;
   animation: all 2s ease;
+  animation-duration: 4s;
+}
+@keyframes cercle {
+  0%{
+  transform:scale(0.5,0.5,0.5,0.5);
+
+  }
+  100%{
+  transform:scale(3,3,3,3);
+
+  }
 }
 
-@keyframes cercle {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform:  scale(0.5);
-  }
-  100% {
-    transform:  scale(3);
-  }
-}
 
 .btn a{
   padding: 3rem;
@@ -78,6 +82,7 @@ span a:hover{
 .btn {color:var(--color2);
   background:transparent;
   border-width:2px;
+  border-radius: 5px;
   border-style: solid;
   border-color: var(--color2);
   position:relative;
@@ -98,9 +103,11 @@ transition:all 0.3s ease-in-out}
 .btn:before {top:-6px;
   left:-6px;
   border-width:2px 0 0 2px;
+  border-radius: 10px;
   z-index:5;}
 .btn:after {bottom:-6px;
   right:-6px;
+  border-radius: 10px;
   border-width:0 2px 2px 0;}
 .btn:hover:before, .btn:hover:after {
   width:calc(100% + 12px);
