--- a/css/animationsvg.css
+++ b/css/animationsvg.css
@@ -1,14 +1,25 @@
-svg{
+.basic-box svg{
   height:8em ;
   width:8em;
   z-index: 11;
   position: absolute;
   top: 1em;
-  left: 4em;
+  left: 2em;
 
 }
 
+.cls-1{
+  fill:#000;
+  stroke:#000;
+}
 
+
+.logo--1{
+  fill:#000;
+  stroke:#000;
+}
+
+/*
 
 .line {
   fill: none;
@@ -28,6 +39,6 @@ stroke-dashoffset: 500;
 @keyframes line-ani {
 
  to {
-opacity: 1;
+opacity: 0.5;
   stroke-dashoffset: 5;
- }
+ } */
