--- a/css/master.css
+++ b/css/master.css
@@ -27,16 +27,29 @@ html{cursor:url("css/images/cercles.svg"), auto;}
 
 }
 
+
 body{
   background: #FFE8D6;
   color: var(--fontcolor);
   font-weight: 400;
   line-height: 1.75;
+
+}
+
+.logo{
+  position: absolute;
+  height:100px;
+  width:100px;
+  top:25px;
+  right:25px;
+  fill:black;
 }
 
 
+
+
 p{margin-bottom: 1rem;
-  font-family: marvin,sans-serif ;
+  font-family: 'Montserrat', sans-serif;
     font-size: 1em;
 }
 
@@ -51,6 +64,11 @@ h1{
   line-height: 0.85em;
   text-align: center;
   font-family: marvin,sans-serif ;
+  background: linear-gradient(to right, var(--color2), var(--color1));
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+
+
 
 
 }
@@ -220,6 +238,9 @@ span a:hover{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) ;
     grid-template-rows: 250px 250px 250px 250px 250px 250px ;
     grid-gap: 20px;
+    margin-left: 10vw;
+    margin-right: 10vw;
+
 }
 
 
@@ -227,7 +248,7 @@ span a:hover{
 .basic-box{
   padding: 1rem;
   border:1px solid var(--fontcolor);
-  border-radius: 20px;
+  border-radius: 100px 100px 0px 0px;
   margin:2rem;
   text-align: center;
   transition: background-color 1s cubic-bezier(0.16, 1, 0.3, 1);
@@ -247,7 +268,7 @@ opacity:0 }
   border:0px;
 }
 .basic-box:nth-child(4):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -266,7 +287,7 @@ opacity:0 }
 border:0px;
 }
 .basic-box:nth-child(5):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -286,7 +307,7 @@ border:0px;
 }
 
 .basic-box:nth-child(6):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -306,7 +327,7 @@ border:0px;
 }
 
 .basic-box:nth-child(7):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -326,7 +347,7 @@ opacity:0 }
 }
 
 .basic-box:nth-child(8):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -345,7 +366,7 @@ opacity:0 }
 border:0px;
 }
 .basic-box:nth-child(9):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
@@ -362,13 +383,13 @@ opacity: 0;
 border:0px;
 }
 .basic-box:nth-child(10):hover svg{
-opacity: 1;
+opacity: 0.5;
 transition: svg 0.5s ease;
 animation: line-ani 7.5s forwards;
 
 }
 .basic-box:nth-child(11):hover{
-  background-color:#1b4f08;
+  background-color:#FBB925;
   color:white;
   transition: background-color 1s cubic-bezier(0.16, 1, 0.3, 1);
   border:0px;
