--- a/css/masterwelcome.css
+++ b/css/masterwelcome.css
@@ -9,9 +9,10 @@
 
 body{
   background: #FFE8D6;
-  background-image: url(css/images/fond.jpg);
+  background-image: url('css/images/fond.jpg');
   background-size: cover;
-overflow: hidden;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 header{
@@ -21,14 +22,23 @@ header{
 
 }
 
+
 .text-logo{
   position: absolute;
   height:100px;
   width:100px;
   top:25px;
   right:25px;
-  fill:"black";
-  stroke:black;
+  animation-name:turn;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
+
+@keyframes turn {
+  0%{transform:  rotate(deg0);}
+  50%{transform:  rotate(deg180);}
+  100%{transform:  rotate(deg360);}
 }
 
 .ml-logo{
@@ -60,7 +70,7 @@ font-family: 'Montserrat', sans-serif;
 .home--page{
 margin-left:auto;
 margin-right:auto;
-margin-top:16vh;
+margin-top:10vh;
 padding: auto;
 text-align: center;
 z-index: 2;
@@ -69,7 +79,7 @@ z-index: 2;
 
 .circle{
   margin:auto;
-  width: 50vw;
+  width: 60vw;
   z-index: 1;
   position:relative;
   animation-name:test;
@@ -87,37 +97,15 @@ z-index: 2;
   100%{transform:  scale(0.75);}
 
 }
-@keyframes cercle {
-  0%{
-  transform:scale(0.5);
-
-  }
-  100%{
-  transform:scale(3);
-
-  }
-}
-
-
-.text-logo{
-  animation-name:turn;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease;
-}
 
 
 
-@keyframes turn {
-  0%{
-  transform: rotate(deg0);
 
-  }
-  100%{
-  transform: rotate(deg360);
 
-  }
-}
+
+
+
+
 
 
 .btn a{
